--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   velocity_x:
   get: ^4.6.5
+  firebase_core: ^2.11.0
+  firebase_auth: ^4.5.0
+  firebase_storage: ^11.1.2
+  cloud_firestore: ^4.6.0
   
 dev_dependencies:
   flutter_test:
