--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   firebase_auth: ^4.5.0
   firebase_storage: ^11.1.2
   cloud_firestore: ^4.6.0
+  shared_preferences: ^2.1.1
   
 dev_dependencies:
   flutter_test:
