--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   firebase_storage: ^11.1.2
   cloud_firestore: ^4.6.0
   shared_preferences: ^2.1.1
+  image_picker: ^0.8.7+5
   
 dev_dependencies:
   flutter_test:
