--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
 
 
   cupertino_icons: ^1.0.2
-  velocity_x:
+  velocity_x: ^3.6.0
   get: ^4.6.5
   firebase_core: ^2.11.0
   firebase_auth: ^4.5.0
@@ -25,6 +25,8 @@ dependencies:
   cloud_firestore: ^4.6.0
   shared_preferences: ^2.1.1
   image_picker: ^0.8.7+5
+  intl:
+ 
   
 dev_dependencies:
   flutter_test:
